Fix slate-appheader control spacing

--- a/src/app/Header.scss
+++ b/src/app/Header.scss
@@ -4,8 +4,12 @@
     box-shadow: inset 0 -1px 0 $border-color;
     padding: 1em 1em 1em 1.25em;
 
-    .x-form-item-label {
-        padding-top: .5em;
+    .x-toolbar-item {
+        margin-right: 2em;
+
+        &:last-child {
+            margin-right: 0;
+        }
     }
 
     .x-btn {
